# mapsa_analysis

./: .gitignore  CMakeLists.txt  README.md  config.cfg  config.in  config_cbc.cfg  config_memory.cfg  gen_analysis.py  runlist.csv  runlist_cbc.csv
analyses/: CMakeLists.txt  alibava_dqm.cpp  alibava_dqm.h  alibavaefficiency.cpp  alibavaefficiency.h  clusterize.cpp  clusterize.h  data_skip.cpp  data_skip.h  efficiency_track.cpp  efficiency_track.h  gblalign.cpp  gblalign.h  main.cpp  mpa_align.cpp  mpa_align.h  mpa_cluster_test.cpp  mpa_cluster_test.h  mpa_cmaes_align.cpp  mpa_cmaes_align.h  mpa_efficiency.cpp  mpa_efficiency.h  mpa_minuit_align.cpp  mpa_minuit_align.h  mpatripletefficiency.cpp  mpatripletefficiency.h  refprealign.cpp  refprealign.h  strip_align.cpp  strip_align.h  strip_efficiency.cpp  strip_efficiency.h  test.cpp  test.h  z_align_test.cpp  z_align_test.h
core/: CMakeLists.txt  coreconfig.in
core/include/: LinkDef.h  abstractfactory.h  alibavaanalysis.h  alibavahitgenerator.h  aligner.h  analysis.h  basesensorstreamreader.h  cbcstreamreader.h  cfgparse.h  core.h  datastructures.h  eigenhash.h  functions.h  histogramfit.h  mergedanalysis.h  mpahitgenerator.h  mpamemorystreamreader.h  mpastreamreader.h  mpatransform.h  quickrunlistreader.h  runlistreader.h  track.h  trackanalysis.h  trackstreamreader.h  transform.h  trim.h  triplet.h  triplettrack.h  util.h
core/src/: alibavaanalysis.cpp  alibavahitgenerator.cpp  aligner.cpp  analysis.cpp  cbcstreamreader.cpp  cfgparse.cpp  core.cpp  datastructures.cpp  functions.cpp  histogramfit.cpp  mergedanalysis.cpp  mpahitgenerator.cpp  mpamemorystreamreader.cpp  mpastreamreader.cpp  mpatransform.cpp  quickrunlistreader.cpp  runlistreader.cpp  trackanalysis.cpp  trackstreamreader.cpp  transform.cpp  triplet.cpp  triplettrack.cpp
core/tests/: cfg_parser_tests.cpp  mpa_stream_reader_tests.cpp  mpatransform_test.cpp  track_stream_reader_tests.cpp
docs/: Doxyfile
interface/: CMakeLists.txt
interface/include/interface/: DataFormats.h  Dict.h
interface/src/: DataFormats.cpp  Dict.cpp
masks/: mpa_inner_fiducal.mask  mpa_sidehot.mask
skips/: Run_108.txt  Run_112.txt  Run_195.txt  Run_199.txt  Run_203.txt  Run_205.txt  Run_207.txt  Run_209.txt  Run_214.txt  Run_215.txt  Run_216.txt  Run_219.txt  Run_220.txt  Run_226.txt  Run_228.txt  Run_236.txt  Run_237.txt  Run_238.txt  Run_239.txt  Run_240.txt  Run_241.txt  Run_243.txt  Run_247.txt  Run_248.txt  Run_250.txt  Run_253.txt  Run_262.txt  Run_265.txt  Run_270.txt  Run_272.txt  Run_280.txt  Run_281.txt  Run_284.txt  Run_288.txt  Run_289.txt  Run_292.txt  Run_358.txt  Run_359.txt  Run_361.txt  Run_362.txt  (+113 more)
src/: CMakeLists.txt  cfgparse.cpp  cfgparse.h  main.cpp
utils/: CMakeLists.txt  batchsubmit.cpp  belphegor.cpp  cmaes2sqlite.py  cmaes_multiscan.sh  efficiency_combiner.cpp  genclustertest.cpp  histogram_combiner.cpp  mpatransformimages.cpp  rotationmatrices.cpp  sacrifice.cpp  submit.sh  testfit.cpp  utilsconfig.in
utils/visucmaes/: CMakeLists.txt  curvesettings.cpp  curvesettings.h  curvesettings.ui  database.cpp  database.h  databaseinfo.ui  globalsettings.cpp  globalsettings.h  globalsettings.ui  icons.qrc  main.cpp  plot.cpp  plot.h  plotdocument.cpp  plotdocument.h  plotsettings.cpp  plotsettings.h  plotsettings.ui  view3d.cpp  view3d.h  view3d.ui  viewport.cpp  viewport.h  visucmaes.cpp  visucmaes.h  visucmaes.ui
