cmake_minimum_required(VERSION 2.8.11)
project(mapsa)
include(CTest)
set(GOOGLETEST_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/external/googletest/googletest/include")
add_subdirectory(external)
include_directories("${CMAKE_SOURCE_DIR}/external/eigen/include")
add_subdirectory(core)
add_subdirectory(analyses)
