cmake_minimum_required(VERSION 2.8.11)
project(mapsa)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")
include(CTest)
set(GOOGLETEST_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/external/googletest/googletest/include")
add_subdirectory(external)
include_directories("${CMAKE_SOURCE_DIR}/external/eigen/include")

find_package(ROOT REQUIRED)
add_definitions("--std=c++11" ${ROOT_DEFINITIONS})
link_libraries(${ROOT_LIBRARIES})
include_directories(${ROOT_INCLUDE_DIR})
add_subdirectory(core)
add_subdirectory(analyses)
add_subdirectory(utils)
