project(mapsa_utils)
find_package(Boost REQUIRED COMPONENTS program_options)
find_package(ROOT REQUIRED)
get_cmake_property(_variableNames VARIABLES)
#foreach (_variableName ${_variableNames})
#    message(STATUS "${_variableName}=${${_variableName}}")
#endforeach()
add_definitions("--std=c++11 -lpthread" ${ROOT_DEFINITIONS})
link_libraries(core ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
include_directories("${CMAKE_SOURCE_DIR}/core/include" ${Boost_INCLUDE_DIR} ${ROOT_INCLUDE_DIR})

#add_executable(histogram_combiner histogram_combiner.cpp)
add_executable(batchsubmit batchsubmit.cpp)
add_executable(efficiency_combiner efficiency_combiner.cpp)
