project(mapsa_utils)
find_package(Boost REQUIRED COMPONENTS program_options)
find_package(ROOT REQUIRED)
get_cmake_property(_variableNames VARIABLES)
#foreach (_variableName ${_variableNames})
#    message(STATUS "${_variableName}=${${_variableName}}")
#endforeach()
add_definitions("--std=c++11 -lpthread" ${ROOT_DEFINITIONS})
link_libraries(core ${Boost_LIBRARIES} ${ROOT_LIBRARIES})

set(BELPHEGOR_SOCKET "/tmp/belphegor.sock" CACHE "FILEPATH" "Path to the belphegor daemon UNIX socket.")
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/utilsconfig.in ${CMAKE_BINARY_DIR}/utilsconfig.h)
include_directories("${CMAKE_SOURCE_DIR}/core/include" ${Boost_INCLUDE_DIR} ${ROOT_INCLUDE_DIR} ${CMAKE_BINARY_DIR})

#add_executable(histogram_combiner histogram_combiner.cpp)
add_executable(batchsubmit batchsubmit.cpp)
add_executable(efficiency_combiner efficiency_combiner.cpp)
add_executable(mpatransformimages mpatransformimages.cpp)
add_executable(belphegor belphegor.cpp)
add_executable(sacrifice sacrifice.cpp)
add_executable(testfit testfit.cpp)
target_link_libraries(belphegor AnalysisClasses)

add_subdirectory(visucmaes)
